login page no longer behind footer

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,6 +21,11 @@ body {
     margin: 0px;
 }
 
+body > #container {
+    height: auto; 
+    min-height: 50%;
+}
+
 h1 {
     text-align: center;
     font-family: 'Voltaire', sans-serif;
@@ -41,8 +46,15 @@ a:hover {
 
 footer {
     width: 100%;
-    position: fixed;
     bottom: 0px;
+    padding-top: 5px;
+    border-top: 1px solid #000;
+    color: #777;
+    clear: both;
+    position: fixed;
+    z-index: 10;
+    height: 3em;
+    margin-top: -3em;
 }
 
 li {
@@ -119,6 +131,7 @@ li.default-li {
     margin-left: 17.85%;
     font-size: 150%;
     width: 64.3%;
+    padding-bottom: 3em;
 }
 
 #footer-bar {
